# crypto-prix

./: .gitignore  README.md
src/services/api/: CHANGELOG.md  Dockerfile  Makefile  pyproject.toml
src/services/api/app/: config.py  main.py
src/services/api/app/auth/: db.py  users.py
src/services/api/app/connectors/: tsdb.py
src/services/api/tests/: conftest.py  test_main.py
src/services/coins/: Dockerfile  Makefile  pyproject.toml
src/services/coins/coins/: config.py  main.py
src/services/coins/coins/db/: tsdb.py
src/services/coins/coins/provider/: coingecko.py
src/services/coins/tests/: conftest.py  test_main.py
terraform/: .pre-commit-config.yaml  Makefile  README.md  helm.tf  kubernetes.tf  provider.tf  variables.tf
terraform/helm-charts/coins-api/templates/: deployment.yaml
terraform/helm-charts/crypto-prix-coins/: Chart.yaml
terraform/templates/: coins-api.tftpl  crypto-prix-coins.tftpl  influxdb.tftpl
